documentSaveCopyAs: Use async job api

exec can have unintended and hard to understand side effects, and in this
case we can just the async api easily as there is no need for blocking

BUG: 466571